# ompi-java-test

./: .gitignore  Makefile-java.include  Makefile.am  PROBLEMS.TXT  README  configure.ac
collective/: AllToAllW.java  Allgather.java  AllgatherInPlace.java  Allgatherv.java  AllgathervInPlace.java  Allreduce.java  AllreduceInPlace.java  Alltoall.java  Alltoallv.java  Barrier.java  Bcast.java  Exscan.java  ExscanInPlace.java  Gather.java  GatherInPlace.java  Gatherv.java  GathervInPlace.java  IAllToAllW.java  Iallgather.java  IallgatherInPlace.java  Iallgatherv.java  IallgathervInPlace.java  Iallreduce.java  IallreduceInPlace.java  Ialltoall.java  Ialltoallv.java  Ibarrier.java  Ibcast.java  Iexscan.java  IexscanInPlace.java  Igather.java  IgatherInPlace.java  Igatherv.java  IgathervInPlace.java  Ireduce.java  IreduceBig.java  IreduceComplexC.java  IreduceInPlace.java  IreduceLoc.java  IreduceScatter.java  (+26 more)
collective_intercomm/: AllgatherInter.java  AllreduceInter.java  AlltoallInter.java  AlltoallvInter.java  BarrierInter.java  BcastInter.java  GatherInter.java  ReduceInter.java  ReduceScatterInter.java  ReduceScatterInter2.java  ScatterInter.java  ScattervInter.java  make_collective_intercomm
communicator/: Attr.java  CommCreateGroup.java  CommDupWithInfo.java  Commdup.java  Commfree.java  Compare.java  InterComm.java  Mpisplit.java  make_communicator
datatype/: Bakstr.java  Getel.java  Loop.java  Paktest.java  Pptransp.java  Structsr.java  Structsr2.java  Transp.java  Transp2.java  Transp3.java  make_datatype
dynamic/: ClientServer.java  LoopChild.java  LoopSpawn.java  NiceMsgs.java  NoDisconnect.java  OmpitestError.java  Spawn.java  SpawnMultiple.java  make_dynamic
environment/: Abort.java  Attrs.java  AttrsPrintValue.java  CommErrhandler.java  FileErrhandler.java  Final.java  Finalized.java  GetLibVersion.java  GetVersion.java  InitThread.java  InitThreadFunneled.java  InitThreadMultiple.java  InitThreadSerialized.java  Initialized.java  IsThrMain.java  Pcontrol.java  Procname.java  QueryThread.java  WinErrhandler.java  Wtime.java  make_environment
group/: Compare.java  GroupTest.java  Groupfree.java  Range.java  make_group
info/: Create00.java  Delete20.java  Get30.java  GetValuelen40.java  Getnkeys50.java  InfoEnv60.java  OmpitestProgress.java  Set10.java  make_info
io/: FileAll.java  FileAtAll.java  FileAtomicity.java  FileStatusGetCount.java  make_io
(+162 files in other folders)
